Rosario Student Information System - CHANGES

Changes in 2.8.23
-----------------
- Go button display when no Edit Allowed in Calendar.php
- Format Events List descriptions in Calendar.php
- Unset REQUEST students var in session after update in Student.php
- Various corrections for French translation
- Use AJAX after browser history instead of reloading page in warehouse.js

Changes in 2.8.22
-----------------
- Fix PHP Warning division by 0 in GradebookBreakdown.php
- Fix Default Points not required in Assignments.php

Changes in 2.8.21
-----------------
- Add Grade Scale default value in EditReportCardGrades.php
- Fix PHP error Invalid argument supplied for foreach() in Courses.php
- Fix spinner image reference in Scheduler.php
- Fixes: Dates not required & Points can be 0 in Assignments.php
- Correct Students Contact query: only if Custody / Emergency checked in GetStuList.fnc.php
- Limit School Years input to 5 past years in EditHistoryMarkingPeriods.php

Changes in 2.8.20
-----------------
- Add Canadian English locale in locale/en_CA.utf8
- Add return_megabytes() & FileUploadMaxSize() functions in FileUpload.fnc.php
- Remove 10Mb limit for Portal Notes file uploads in PortalNotes.php
- Send emails from programname instead of rosariosis in SendEmail.fnc.php
- Bugfix photo name when assign student ID with leading 000 in Student.php
- Add .odt, .ods & .odp (LibreOffice docs) to Portal Notes attached file in PortalNotes.php
- Fix StudentGrades.php student Help text in Help_en.php
- Fix Auto & Edit pull-downs options Advanced Search in Search.fnc.php
- Remove empty option from select fields Advanced Search in Search.fnc.php
- Add values found in current and previous year to Edit pull-downs in AssingOtherInfo.php
- Correct Class Rank field type to checkbox in EditReportCardGrades.php
- Fix Do not include students enrolled in previous school years in GetStuList.fnc.php
- Limit Requests Course DIV height in stylesheet.css

Changes in 2.8.19
-----------------